Update GTNH Deployment Manual: Add Connection & Identity Management section, RCON setup instructions, and Backup Restoration SOP